# WikiGameSolver

./: CMakeLists.txt  README.md  logging.hpp  safetypes.hpp  wikipedia.cpp
